Fix module can be force enable even when deps unmet